--- a/index.html
+++ b/index.html
@@ -82,11 +82,41 @@
 		<!-- Serviços -->
 		<section id="servicos">
 			<div class="container">
-				<div class="col-xs-12">
-					<div class="page-header">
-						<h1>Serviços <small>Conheça o que fazemos</small></h1>
+				
+				<div class="row">
+					<div class="col-xs-12">
+						<div class="page-header">
+							<h1>Serviços <small>Conheça o que fazemos</small></h1>
+						</div>
 					</div>
 				</div>
+
+				<div class="row">
+
+					<div class="col-sm-4 col-md-4 col-xs-4 servicos_item">
+						<div><img src="img/service/servico1.jpg" class="img-responsive img-circle"></div>
+						<h4>E-commerce</h4>
+						<p>Descrição do serviço apresentado. Descrição do serviço apresentado.</p>
+					</div>
+					<div class="col-sm-4 col-md-4 col-xs-4 servicos_item">
+						<div><img src="img/service/servico2.jpg" class="img-responsive img-circle"></div>
+						<h4>Desenvolvimento de Sites</h4>
+						<p>Descrição do serviço apresentado. Descrição do serviço apresentado.</p>
+					</div>
+					<div class="col-sm-4 col-md-4 col-xs-4 servicos_item">
+						<div><img src="img/service/servico3.jpg" class="img-responsive img-circle"></div>
+						<h4>E-commerce</h4>
+						<p>Descrição do serviço apresentado. Descrição do serviço apresentado.</p>
+					</div>
+
+					<div class="row">
+						<div class="col-xs-12 text-center">
+							<a href="#" class="btn btn-default btn-lg servicos__btn_todososservicos">Clique aqui para ver todos os nossos serviços</a>
+						</div>
+					</div>
+				
+				</div>
+			
 			</div>
 		</section>
 		<!-- // Fim Serviços -->
