Criação de Painel, Navbar e Ícones - Painel, Tela de Login, Páginas (Portfolio, Quem Somos) - Instalação Font Awesome, Background

--- a/index.html
+++ b/index.html
@@ -12,13 +12,12 @@
         <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet"><!-- Pegar a fonte no googlefont-->
 	</head>
 	<body data-spy="scroll" data-target=".menu-navegacao" data-offset="80">
-		
 
 		<!-- Menu da Aplicação -->
-		<nav class="navbar navbar-default navbar-fixed-top">
+		<nav class="navbar navbar-default navbar-fixed-top navbar-inverse">
 			<div class="container">
 				<div class="navbar-header">
-					<a class="navbar-brand" href="#page-top">Curso</a>
+					<a class="navbar-brand" href="#page-top index.html">Bootstrap</a>
 					<button type="" class="navbar-toggle" data-toggle="collapse" data-target="#menu-navegacao">
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
@@ -81,9 +80,9 @@
 
 		<!-- Serviços -->
 		<section id="servicos">
-			<div class="container">
+			<div class="container bgheader">
 				
-				<div class="row">
+				<div class="row bgheader">
 					<div class="col-xs-12">
 						<div class="page-header">
 							<h1>Serviços <small>Conheça o que fazemos</small></h1>
@@ -92,7 +91,6 @@
 				</div>
 
 				<div class="row">
-
 					<div class="col-sm-4 col-md-4 col-xs-4 servicos_item">
 						<div><img src="img/service/servico1.jpg" class="img-responsive img-circle"></div>
 						<h4>E-commerce</h4>
@@ -173,7 +171,7 @@
 				</div>
 				<div class="row">
 					<div class="col-xs-12 text-center">
-						<a href="#" class="btn btn-default btn-lg servicos__btn_todososservicos">Clique aqui para conhecer todos os nossos clientes</a>
+						<a href="portfolio.html" class="btn btn-default btn-lg servicos__btn_todososservicos">Clique aqui e conheça os nossos clientes</a>
 					</div>
 				</div>
 			</div>
@@ -246,6 +244,11 @@
 							<div><img src="img/portfolio/portfolio4.jpg" class="img-responsive grayscale"></div>
 							<h4>Nome do funcionário</h4>
 						</div>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-xs-12 text-center">
+						<a href="quemsomos.html" class="btn btn-default btn-lg servicos__btn_todososservicos">Clique aqui e conheça nossa empresa</a>
 					</div>
 				</div>	
 			</div>
