--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
         <!-- adicionar CSS Bootstrap localmente -->
-        <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
+        <link href="css/bootstrap.darklay.min.css" rel="stylesheet" media="screen">
          <!-- CSS personalizado -->
         <link href="css/estilo.css" rel="stylesheet" media="screen">
         <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet"><!-- Pegar a fonte no googlefont-->
@@ -33,6 +33,8 @@
 						<li><a href="#quemsomos">Quem somos</a></li>
 						<li><a href="#localizacao">Localização</a></li>
 						<li><a href="#contato">Contato</a></li>
+						<li><a href="painel.html">Painel</a></li>
+						<li><a href="login.html">Login</a></li>
 					</ul>
 				</div>
 			</div>
